[Small fix] Fixing wrong width

--- a/assets/styles/your_project.scss
+++ b/assets/styles/your_project.scss
@@ -32,6 +32,6 @@
 
     .content {
         margin-top: -105px;
-        max-width: 65vw;
+        max-width: 75vw;
     }
 }
